fix: Adjust styles in app.css for improved responsiveness on smaller screens.

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,19 +1,25 @@
 #root {
-    width: 100%;
-    height: 100dvh;
-    padding: 0 4em;
+  width: 100%;
+  height: 100dvh;
+  padding: 0 4em;
 }
 
 main {
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    max-height: 90dvh;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  max-height: 90dvh;
 }
 
 @media screen and (max-width: 1024px) {
   #root {
+    height: 100svh;
     padding: 0 1.2em;
+  }
+
+  main {
+    margin: 25px 0;
+    max-height: none;
   }
 }
